--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,8 +103,9 @@ a { text-decoration: none; transition: 0.3s; }
 
 
 .section-title { 
-    font-size: 2.2rem; 
-    margin-bottom: 30px; /* Reduced from 50px */
+    font-size: 2rem; 
+    margin-top: 60px;    
+    margin-bottom: 30px; 
     text-align: center; 
 }
 
