--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,8 +38,12 @@ a { text-decoration: none; transition: 0.3s; }
 
 .wave-background {
     position: absolute;
-    bottom: -10px; left: 0; width: 100%;
-    line-height: 0; z-index: 1; opacity: 0.7;
+    bottom: -10px; 
+    left: 0; 
+    width: 100%;
+    line-height: 0; 
+    z-index: 1; 
+    opacity: 0.7;
 }
 .wave-background img { width: 100%; display: block; }
 
@@ -47,7 +51,7 @@ a { text-decoration: none; transition: 0.3s; }
     position: relative;
     z-index: 10;
     text-align: center;
-    padding-bottom: 0px !important; 
+    padding-bottom: 30px; /* Changed from 0 to 60px */
 }
 
 /* Profile Picture & Frame */
@@ -97,16 +101,16 @@ a { text-decoration: none; transition: 0.3s; }
 /* --- SECTIONS --- */
 
 .section { 
-    padding: 0 0 !important;
+    padding: 60px 0; /* Changed from 0 to 60px */
     border-bottom: 1px solid var(--border); 
 }
 
 
 .section-title { 
     font-size: 2rem; 
-    margin-top: 60px;    
-    margin-bottom: 30px; 
+    margin-bottom: 50px; /* Restored to 50px for cleaner look */
     text-align: center; 
+    margin-top: 0; /* Reset top margin since we have padding now */
 }
 
 /* ABOUT */
